css/styles.css
html {
    box-sizing: border-box;
}

*,
*:before,
*:after {
    box-sizing: inherit;
}

ul,
ol {
    list-style: none;
    padding: 0;
}

body {
    font-family: 'Quicksand', sans-serif;
    background-color: #9C8573;
}

header {
    width: 100%;
    background-color: #BF6E33;
    padding: 0 10px;
    font-family: 'EB Garamond', serif;
}

header > * {
    display: inline-block;
    height: 68px;
    vertical-align: text-top;
}

header img {
    background-color: transparent;
    width: 50px;
}

.logo {
    width: 55px;
}

img[alt=logo] {
    padding: 7.33px 0;
}

.tagline {
    color: #35373A;
    width: 172px;
}

.menu-button {
    float: right;
    width: 55px;
}

img[alt=menu] {
    float: right;
}

.container {
    max-width: 30em;
    margin: 1em auto 0;
    text-align: center;
}

form {
    margin: 0 auto;
    text-align: center;
}

form input {
    border-radius: 2em;
    border: none;
    background-color: #F2EDDB;
    color: #4A4A4D;
    box-shadow: 0 1px 0 #333 inset;
    transition: 500ms all ease;
    width: 14em;
    text-align: center;
    font-size: 1.3em;
}

.label {
    margin: 1.5em 0 0 -1em;
    background-color: #4A4A4D;
    color: #F2EDDB;
    width: 80%;
    max-width: 15em;
    border-top-left-radius: 30px;
    border-top-right-radius: 30px;
    display: inline-block;
}

.label h3 {
    margin: 0;
}

.itemrow {
    margin-bottom: .5em;
}

.itemrow input {
    padding-left: .5em;
}

.itemrow .item {
    background-color: #F2EDDB;
    margin-left: 1em;
    width: 14em;
    -webkit-filter: none;
    filter: none;
}

.itemrow .fa {
    color: #35373A;
    cursor: pointer;
    font-size: 1.4em;
    vertical-align: middle;
}

.fa:hover {
    font-size: 1.45em;
    text-shadow: 1px 1px 1px #F2EDDB;
}

.fa:active {
    color: #BF6E33;
}

.itemrow .item.checked {
    -webkit-filter: hue-rotate(120deg);
    filter: hue-rotate(120deg);
}

.add {
    color: #F2EDDB;
    margin: 0;
    font-size: 1.2em;
    font-weight: 700;
    border-color: white;
    border-radius: 1em;
    padding: .25em 4em;
    background-color: #BF6E33;
}

.add:active {
    padding: .375em 4em .125em;
}

input:focus, textarea:focus {
    outline: none;
}

@media screen and (min-width: 400px) {
    .itemrow .item {
        width: 17em;
    }
    .label {
        margin-left: -4em;
    }
}

